--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -122,21 +122,4 @@ nav .nav-logo {
   height: 70px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  scroll-padding-top: 6rem;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #1b262c;
-  font-size: 1.05rem;
-  line-height: 1.66rem;
-}
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=nav.css.map */
