--- a/assets/css/typo.css
+++ b/assets/css/typo.css
@@ -1,3 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@200;300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;400;600&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  color: #bbe1fa;
+}
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection {
+  color: #1b262c;
+  background: #3282b8;
+}
 
+p {
+  font-family: "Overpass", sans-serif;
+  font-size: 1.05rem;
+  line-height: 1.66rem;
+  font-weight: 200;
+  color: #bbe1fa;
+}
+p::selection {
+  color: #1b262c;
+  background: #3282b8;
+}
 
 /*# sourceMappingURL=typo.css.map */
