--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,2 +1,20 @@
 @use "vars" as v;
 @use "typo" as ty;
+@use "nav";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  scroll-padding-top: 6rem;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: v.$color-bg;
+  font-size: 1.05rem;
+  line-height: 1.66rem;
+}
