--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -3,3 +3,8 @@ $color-text: #bbe1fa;
 $color-high: #3282b8;
 $color-low: #0f4c75;
 $color-lowlight: #112240;
+$color-gradient: linear-gradient(
+  90deg,
+  rgba(50, 130, 184, 1) 0%,
+  rgba(27, 38, 44, 1) 50%
+);
