--- a/assets/scss/nav.scss
+++ b/assets/scss/nav.scss
@@ -1,24 +1,27 @@
 @use "vars" as v;
 @use "typo" as ty;
 
-nav {
-  padding: 2rem 2rem 0rem 2rem;
-  max-width: 90%;
-  height: 9rem;
+.nav {
+  padding: 0 6rem;
+  width: 100%;
+  height: 8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  background-color: rgba(v.$color-bg, 0.95);
 
   ul.nav_links {
     display: flex;
     align-items: center;
     list-style: none;
+    z-index: 101;
 
     .nav_item {
-      // position: relative;
+      position: relative;
       margin-left: 4rem;
       transition: all 0.5s;
+      transition: all 0.3s;
 
       a.nav_link:link,
       a.nav_link:visited {
@@ -34,15 +37,15 @@ nav {
         &:before {
           content: "";
           position: absolute;
-          top: 0;
+          top: 0 1px;
           left: 0;
           width: 100%;
-          height: 100%;
-          border-top: 1px solid v.$color-high;
-          border-bottom: 1px solid v.$color-high;
+          height: 90%;
+          border-top: 1px solid v.$color-gradient;
+          border-bottom: 1px solid v.$color-gradient;
           border-left: 1px solid v.$color-high;
           border-right: 1px solid v.$color-high;
-          transform: scaleY(2);
+          transform: scaleY(1);
           opacity: 0;
           transition: 0.5s;
         }
@@ -64,29 +67,35 @@ nav {
         &:hover {
           color: #fff;
           &:before {
-            transform: scaleY(1.4);
-            rotate: (15deg);
-            opacity: 0.5;
-            border-top-left-radius: 14px;
-            border-bottom-right-radius: 14px;
+            transform: scale(1.3);
+            rotate: (5deg);
+            opacity: 0.25;
+            // border-top-left-radius: 14px;
+            // border-bottom-right-radius: 14px;
           }
           &:after {
-            transform: scaleY(1);
+            transform: scale(1) rotate(5deg);
             opacity: 0.9;
-            border-top-right-radius: 14px;
-            border-bottom-left-radius: 14px;
-            overflow: hidden;
+            // border-top-left-radius: 14px;
+            // border-bottom-right-radius: 14px;
+            // overflow: hidden;
           }
         }
       }
     }
   }
 
-  .nav.sticky {
+  .blur {
+    filter: blur(0.5);
+  }
+
+  .sticky {
     position: fixed;
+    background-color: rgba(v.$color-bg, 0.95);
   }
 
   .nav-logo {
     height: 70px;
+    transition: all 0.3s;
   }
 }
