--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,9 +38,153 @@ p::selection {
 .header_title {
   font-size: 4rem;
 }
-.header_title span {
+.header_title span.cursive {
   font-family: "Edu NSW ACT Foundation", cursive;
   color: #3282b8;
+}
+.header_title span.design {
+  position: relative;
+  color: #bbe1fa;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+.header_title span.design:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.header_title span.design:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3282b8;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.header_title span.design:hover {
+  color: #fff;
+  display: inline-block;
+}
+.header_title span.design:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.header_title span.design:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+.header_title span.code {
+  position: relative;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.header_title span.code:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.header_title span.code:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.header_title span.code:hover {
+  color: #fff;
+}
+.header_title span.code:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.header_title span.code:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+.header_title span.stuff {
+  position: relative;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.header_title span.stuff:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.header_title span.stuff:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.header_title span.stuff:hover {
+  color: #fff;
+}
+.header_title span.stuff:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.header_title span.stuff:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
 }
 
 h1.section_heading {
@@ -268,6 +412,12 @@ body {
   line-height: 1.66rem;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  font-size: inherit;
+}
+
 .header_content {
   height: calc(100vh - 128px);
   display: flex;
@@ -285,6 +435,7 @@ section {
 .container {
   padding-left: 5rem;
   padding-right: 5rem;
+  z-index: 3;
 }
 
 .section--hidden {
@@ -299,6 +450,39 @@ section {
   .section {
     padding: 1rem;
   }
+}
+.design_content {
+  transform: scale(1);
+  padding: 2rem;
+  opacity: 0;
+  transform: rotate(0);
+  transition: opacity 0.5s, scale 1s, transform 1s;
+}
+.design_content:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(1);
+  transform-origin: center;
+  opacity: 1;
+  transition: 0.5s;
+  z-index: -1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #112240;
+  opacity: 0;
+  z-index: 0;
+  transition: opacity 1s;
 }
 
 /*# sourceMappingURL=main.css.map */
