--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -35,53 +35,84 @@ p::selection {
   background: #3282b8;
 }
 
-nav {
-  padding: 2rem 2rem 0rem 2rem;
-  max-width: 90%;
-  height: 9rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 100;
+.header_title {
+  font-size: 4rem;
 }
-nav ul.nav_links {
-  display: flex;
-  align-items: center;
-  list-style: none;
+.header_title span.cursive {
+  font-family: "Edu NSW ACT Foundation", cursive;
+  color: #3282b8;
 }
-nav ul.nav_links .nav_item {
-  margin-left: 4rem;
-  transition: all 0.5s;
-}
-nav ul.nav_links .nav_item a.nav_link:link,
-nav ul.nav_links .nav_item a.nav_link:visited {
+.header_title span.design {
   position: relative;
-  font-size: 1.2rem;
-  font-weight: 400;
   color: #bbe1fa;
   text-decoration: none;
-  display: block;
   transition: all 0.3s;
-  padding: 5px 15px;
 }
-nav ul.nav_links .nav_item a.nav_link:link:before,
-nav ul.nav_links .nav_item a.nav_link:visited:before {
+.header_title span.design:before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 0 1px;
   left: 0;
   width: 100%;
-  height: 100%;
-  border-top: 1px solid #3282b8;
-  border-bottom: 1px solid #3282b8;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
   border-left: 1px solid #3282b8;
   border-right: 1px solid #3282b8;
-  transform: scaleY(2);
+  transform: scaleY(1);
   opacity: 0;
   transition: 0.5s;
 }
-nav ul.nav_links .nav_item a.nav_link:link:after,
-nav ul.nav_links .nav_item a.nav_link:visited:after {
+.header_title span.design:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3282b8;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.header_title span.design:hover {
+  color: #fff;
+  display: inline-block;
+}
+.header_title span.design:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.header_title span.design:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+.header_title span.code {
+  position: relative;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.header_title span.code:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.header_title span.code:after {
   content: "";
   position: absolute;
   top: 1px;
@@ -95,31 +126,185 @@ nav ul.nav_links .nav_item a.nav_link:visited:after {
   transition: 0.5s;
   z-index: -1;
 }
-nav ul.nav_links .nav_item a.nav_link:link:hover,
-nav ul.nav_links .nav_item a.nav_link:visited:hover {
+.header_title span.code:hover {
   color: #fff;
 }
-nav ul.nav_links .nav_item a.nav_link:link:hover:before,
-nav ul.nav_links .nav_item a.nav_link:visited:hover:before {
-  transform: scaleY(1.4);
-  rotate: 15deg;
-  opacity: 0.5;
-  border-top-left-radius: 14px;
-  border-bottom-right-radius: 14px;
+.header_title span.code:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
 }
-nav ul.nav_links .nav_item a.nav_link:link:hover:after,
-nav ul.nav_links .nav_item a.nav_link:visited:hover:after {
-  transform: scaleY(1);
+.header_title span.code:hover:after {
+  transform: scale(1) rotate(5deg);
   opacity: 0.9;
-  border-top-right-radius: 14px;
-  border-bottom-left-radius: 14px;
-  overflow: hidden;
 }
-nav .nav.sticky {
+.header_title span.stuff {
+  position: relative;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.header_title span.stuff:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.header_title span.stuff:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.header_title span.stuff:hover {
+  color: #fff;
+}
+.header_title span.stuff:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.header_title span.stuff:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+
+h1.section_heading {
+  position: relative;
+  text-align: center;
+  font-weight: 500;
+  font-size: 2.4rem;
+  margin: auto;
+  margin-bottom: 8rem;
+  z-index: 999;
+  opacity: 1;
+}
+h1.section_heading::after {
+  position: absolute;
+  content: "";
+  border-top: 1px solid rgba(15, 76, 117, 0.3);
+  height: 3rem;
+  width: 10rem;
+  top: 1.05rem;
+  left: 50%;
+}
+h1.section_heading::before {
+  position: absolute;
+  content: "";
+  border-top: 1px solid rgba(15, 76, 117, 0.3);
+  height: 3rem;
+  width: 10rem;
+  top: 2.28rem;
+  left: calc(50% - 10rem);
+}
+
+.nav {
+  padding: 0 6rem;
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+  background-color: rgba(27, 38, 44, 0.95);
+}
+.nav ul.nav_links {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  z-index: 101;
+}
+.nav ul.nav_links .nav_item {
+  position: relative;
+  margin-left: 4rem;
+  transition: all 0.5s;
+  transition: all 0.3s;
+}
+.nav ul.nav_links .nav_item a.nav_link:link,
+.nav ul.nav_links .nav_item a.nav_link:visited {
+  position: relative;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: block;
+  transition: all 0.3s;
+  padding: 5px 15px;
+}
+.nav ul.nav_links .nav_item a.nav_link:link:before,
+.nav ul.nav_links .nav_item a.nav_link:visited:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.nav ul.nav_links .nav_item a.nav_link:link:after,
+.nav ul.nav_links .nav_item a.nav_link:visited:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.nav ul.nav_links .nav_item a.nav_link:link:hover,
+.nav ul.nav_links .nav_item a.nav_link:visited:hover {
+  color: #fff;
+}
+.nav ul.nav_links .nav_item a.nav_link:link:hover:before,
+.nav ul.nav_links .nav_item a.nav_link:visited:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.25;
+}
+.nav ul.nav_links .nav_item a.nav_link:link:hover:after,
+.nav ul.nav_links .nav_item a.nav_link:visited:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+.nav .blur {
+  filter: blur(0.5);
+}
+.nav .sticky {
   position: fixed;
+  background-color: rgba(27, 38, 44, 0.95);
 }
-nav .nav-logo {
+.nav .nav-logo {
   height: 70px;
+  transition: all 0.3s;
 }
 
 /*# sourceMappingURL=nav.css.map */
