--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,12 @@ body {
   line-height: 1.66rem;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  font-size: inherit;
+}
+
 .vspacer {
   // padding: 6rem 0rem;
 }
@@ -43,6 +49,7 @@ section {
 .container {
   padding-left: 5rem;
   padding-right: 5rem;
+  z-index: 3;
 }
 
 .section--hidden {
@@ -60,4 +67,42 @@ section {
   .section {
     padding: 1rem;
   }
+}
+
+.design_content {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // width: 80%;
+  transform: scale(1);
+  padding: 2rem;
+  opacity: 0;
+  transform: rotate(0);
+  transition: opacity 0.5s, scale 1s, transform 1s;
+  &:after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: v.$color-low;
+    transform: scale(1);
+    transform-origin: center;
+    opacity: 1;
+    transition: 0.5s;
+    z-index: -1;
+  }
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: v.$color-lowlight;
+  opacity: 0;
+  z-index: 0;
+  transition: opacity 1s;
 }
