--- a/assets/scss/typo.scss
+++ b/assets/scss/typo.scss
@@ -41,9 +41,189 @@ p {
 
 .header_title {
   font-size: 4rem;
-  span {
+  span.cursive {
     font-family: $font-edu;
     color: v.$color-high;
+  }
+  // span.design,
+  // span.code,
+  span.design {
+    position: relative;
+    // font-size: 1.2rem;
+    // font-weight: 400;
+    color: v.$color-text;
+    text-decoration: none;
+    // display: block;
+    transition: all 0.3s;
+    // padding: 5px 15px;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0 1px;
+      left: 0;
+      width: 100%;
+      height: 90%;
+      border-top: 1px solid v.$color-gradient;
+      border-bottom: 1px solid v.$color-gradient;
+      border-left: 1px solid v.$color-high;
+      border-right: 1px solid v.$color-high;
+      transform: scaleY(1);
+      opacity: 0;
+      transition: 0.5s;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: v.$color-high;
+      transform: scale(0);
+      transform-origin: center;
+      opacity: 0;
+      transition: 0.5s;
+      z-index: -1;
+    }
+    &:hover {
+      color: #fff;
+      display: inline-block;
+      // transform: rotate(25deg);
+      &:before {
+        transform: scale(1.3);
+        rotate: (5deg);
+        opacity: 0.25;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+      }
+      &:after {
+        transform: scale(1) rotate(5deg);
+        opacity: 0.9;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+        // overflow: hidden;
+      }
+    }
+  }
+
+  span.code {
+    position: relative;
+    // font-size: 1.2rem;
+    // font-weight: 400;
+    color: v.$color-text;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.3s;
+    // padding: 5px 15px;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0 1px;
+      left: 0;
+      width: 100%;
+      height: 90%;
+      border-top: 1px solid v.$color-gradient;
+      border-bottom: 1px solid v.$color-gradient;
+      border-left: 1px solid v.$color-high;
+      border-right: 1px solid v.$color-high;
+      transform: scaleY(1);
+      opacity: 0;
+      transition: 0.5s;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: v.$color-low;
+      transform: scale(0);
+      transform-origin: center;
+      opacity: 0;
+      transition: 0.5s;
+      z-index: -1;
+    }
+    &:hover {
+      color: #fff;
+      &:before {
+        transform: scale(1.3);
+        rotate: (5deg);
+        opacity: 0.25;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+      }
+      &:after {
+        transform: scale(1) rotate(5deg);
+        opacity: 0.9;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+        // overflow: hidden;
+      }
+    }
+  }
+
+  span.stuff {
+    position: relative;
+    // font-size: 1.2rem;
+    // font-weight: 400;
+    color: v.$color-text;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.3s;
+    // padding: 5px 15px;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0 1px;
+      left: 0;
+      width: 100%;
+      height: 90%;
+      border-top: 1px solid v.$color-gradient;
+      border-bottom: 1px solid v.$color-gradient;
+      border-left: 1px solid v.$color-high;
+      border-right: 1px solid v.$color-high;
+      transform: scaleY(1);
+      opacity: 0;
+      transition: 0.5s;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: v.$color-low;
+      transform: scale(0);
+      transform-origin: center;
+      opacity: 0;
+      transition: 0.5s;
+      z-index: -1;
+    }
+    &:hover {
+      color: #fff;
+      &:before {
+        transform: scale(1.3);
+        rotate: (5deg);
+        opacity: 0.25;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+      }
+      &:after {
+        transform: scale(1) rotate(5deg);
+        opacity: 0.9;
+        // border-top-left-radius: 14px;
+        // border-bottom-right-radius: 14px;
+        // overflow: hidden;
+      }
+    }
   }
 }
 
