--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -196,3 +196,9 @@ section {
 .underline {
   text-decoration: underline;
 }
+
+.design_content-img {
+  position: relative;
+  left: 50%;
+  width: 50%;
+}
