--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -572,4 +572,10 @@ section {
   text-decoration: underline;
 }
 
+.design_content-img {
+  position: relative;
+  left: 50%;
+  width: 50%;
+}
+
 /*# sourceMappingURL=main.css.map */
