--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,6 +207,56 @@ h1.section_heading::before {
   left: calc(50% - 10rem);
 }
 
+.cursive {
+  font-family: "Edu NSW ACT Foundation", cursive;
+  color: #3282b8;
+  font-size: 2rem;
+}
+
+.inlineLink {
+  position: relative;
+  text-decoration: underline;
+}
+.inlineLink:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.3s;
+}
+.inlineLink:after {
+  content: "";
+  position: absolute;
+  top: -15%;
+  left: -10%;
+  width: 120%;
+  height: 130%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.3s;
+  z-index: -1;
+}
+.inlineLink:hover {
+  color: #fff;
+}
+.inlineLink:hover:before {
+  transform: scale(1.3);
+  rotate: 5deg;
+  opacity: 0.15;
+}
+.inlineLink:hover:after {
+  transform: scale(1) rotate(5deg);
+  opacity: 0.9;
+}
+
 .nav {
   padding: 0 6rem;
   width: 100%;
@@ -303,6 +353,7 @@ h1.section_heading::before {
 .project_boxes-box {
   position: relative;
   padding: 2rem;
+  margin-bottom: 4rem;
 }
 .project_boxes-box h3 {
   color: #3282b8;
@@ -326,6 +377,10 @@ h1.section_heading::before {
   color: inherit;
   font-size: 2rem;
   padding: 0.6rem;
+}
+.project_boxes-box .box-description .box-used-tech .tech i img {
+  width: 2rem;
+  margin-top: 0.6rem;
 }
 
 .skill-badges {
@@ -597,11 +652,12 @@ section {
 }
 
 .typewriter h3 {
+  opacity: 1;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid #3282b8; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   letter-spacing: 0.1em; /* Adjust as needed */
-  animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end;
+  animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end forwards;
 }
 
 /* The typing effect */
