--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -221,6 +221,7 @@ section {
 }
 
 .typewriter h3 {
+  opacity: 1;
   // color: #fff;
   // font-family: monospace;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
@@ -228,7 +229,8 @@ section {
   white-space: nowrap; /* Keeps the content on a single line */
   // margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0.1em; /* Adjust as needed */
-  animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end;
+
+  animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end forwards;
 }
 
 /* The typing effect */
@@ -265,4 +267,9 @@ section {
 
 .design_content-text {
   font-size: 1rem;
+}
+
+.project_boxes-project-name {
+  h3 {
+  }
 }
