--- a/assets/scss/work.scss
+++ b/assets/scss/work.scss
@@ -16,9 +16,7 @@
   h3 {
     color: v.$color-high;
   }
-  img {
-    width: 100%;
-  }
+
   .box-description {
     margin-top: 1rem;
     p {
@@ -41,6 +39,30 @@
             // padding: 0.6rem;
           }
         }
+      }
+    }
+  }
+  .project-wrapper {
+    position: relative;
+    img {
+      width: 100%;
+    }
+    .project-links {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 0;
+      opacity: 0;
+      background-color: rgba(v.$color-low, 0.9);
+      color: v.$color-text;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .close-button {
+        position: absolute;
+        top: 0.5rem;
+        right: 1rem;
       }
     }
   }
