--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,8 +298,8 @@ h1.section_heading::before {
   left: 0;
   width: 100%;
   height: 90%;
-  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
-  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-top: 1px solid linear-gradient(90deg, #3282b8 0%, #1b262c 50%);
+  border-bottom: 1px solid linear-gradient(90deg, #3282b8 0%, #1b262c 50%);
   border-left: 1px solid #3282b8;
   border-right: 1px solid #3282b8;
   transform: scaleY(1);
@@ -426,8 +426,8 @@ h1.section_heading::before {
 }
 .footer {
   padding: 10rem 3rem;
-  background: rgb(27, 38, 44);
-  background: linear-gradient(180deg, rgb(27, 38, 44) 50%, rgb(15, 76, 117) 99%);
+  background: #1b262c;
+  background: linear-gradient(180deg, #1b262c 50%, #0f4c75 99%);
 }
 
 .footer__nav {
@@ -551,10 +551,14 @@ h1.section_heading::before {
 
 .typewriter h3 {
   opacity: 1;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid #3282b8; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  letter-spacing: 0.1em; /* Adjust as needed */
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid #3282b8;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  letter-spacing: 0.1em;
+  /* Adjust as needed */
   animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end forwards;
 }
 
@@ -749,9 +753,11 @@ section {
   .container {
     margin: 0 auto;
   }
+
   .section {
     padding: 1rem;
   }
+
   .contentWrap {
     max-height: calc(100vh - 12rem);
   }
@@ -760,6 +766,7 @@ section {
   .contentWrap {
     max-height: 50%;
   }
+
   .design_content,
 .code_content,
 .stuff_content {
