--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,8 +298,8 @@ h1.section_heading::before {
   left: 0;
   width: 100%;
   height: 90%;
-  border-top: 1px solid linear-gradient(90deg, #3282b8 0%, #1b262c 50%);
-  border-bottom: 1px solid linear-gradient(90deg, #3282b8 0%, #1b262c 50%);
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
   border-left: 1px solid #3282b8;
   border-right: 1px solid #3282b8;
   transform: scaleY(1);
@@ -436,10 +436,11 @@ h1.section_heading::before {
   min-height: 7rem;
 }
 .card .used {
+  position: relative;
   transition: all 0.2s;
   display: flex;
   align-items: center;
-  justify-content: center;
+  height: 4rem;
   color: #bbe1fa;
 }
 .card .used i {
@@ -448,6 +449,50 @@ h1.section_heading::before {
 }
 .card .used i img {
   width: 2rem;
+}
+
+.project-links-lg {
+  position: absolute;
+  width: 40%;
+  bottom: -150%;
+  left: 1rem;
+  height: 125%;
+  color: #1b262c;
+  padding: 1rem;
+  transition: transform 0.2s;
+  background-color: #bbe1fa;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+.project-links-lg a {
+  width: 3rem;
+}
+.project-links-lg a.more::after {
+  position: relative;
+  left: 25%;
+  bottom: 1rem;
+  content: "more";
+  font-size: 10px;
+}
+.project-links-lg a.go::after {
+  position: relative;
+  left: 1.2rem;
+  bottom: 1rem;
+  content: "visit";
+  font-size: 10px;
+}
+
+.moveUp {
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+}
+
+.goMiddle {
+  justify-content: center;
+}
+
+.goRight {
+  justify-content: end;
 }
 
 .skill-badges {
@@ -472,8 +517,8 @@ h1.section_heading::before {
 }
 .footer {
   padding: 10rem 3rem;
-  background: #1b262c;
-  background: linear-gradient(180deg, #1b262c 50%, #0f4c75 99%);
+  background: rgb(27, 38, 44);
+  background: linear-gradient(180deg, rgb(27, 38, 44) 50%, rgb(15, 76, 117) 99%);
 }
 
 .footer__nav {
@@ -597,14 +642,10 @@ h1.section_heading::before {
 
 .typewriter h3 {
   opacity: 1;
-  overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid #3282b8;
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  letter-spacing: 0.1em;
-  /* Adjust as needed */
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid #3282b8; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  letter-spacing: 0.1em; /* Adjust as needed */
   animation: typing 3.5s steps(45, end), blink-caret 0.5s step-end forwards;
 }
 
@@ -799,11 +840,9 @@ section {
   .container {
     margin: 0 auto;
   }
-
   .section {
     padding: 1rem;
   }
-
   .contentWrap {
     max-height: calc(100vh - 12rem);
   }
@@ -812,7 +851,6 @@ section {
   .contentWrap {
     max-height: 50%;
   }
-
   .design_content,
 .code_content,
 .stuff_content {
