--- a/assets/scss/work2.scss
+++ b/assets/scss/work2.scss
@@ -2,17 +2,13 @@
 @use "typo" as ty;
 
 .card {
-  // border-radius: 0;
-  // padding: 10px;
   background-color: rgba(v.$color-low, 0.8);
   overflow: hidden;
   transition: all 0.3s;
   .card-img-top {
     background-color: black;
-
     min-height: 20rem;
     object-fit: cover;
-    // border: 1px solid v.$color-high;
     filter: grayscale(0.7);
     transition: all 0.2s;
   }
@@ -21,8 +17,6 @@
     .card-img-top {
       filter: grayscale(0);
       transform: scale(0.975);
-
-      // object-fit: contain;
       transition: all ease-in-out 0.15s;
     }
   }
@@ -38,24 +32,70 @@
     min-height: 7rem;
   }
   .used {
-    // padding: 1.2rem 0;
+    position: relative;
     transition: all 0.2s;
-    // color: inherit;
     display: flex;
     align-items: center;
-    justify-content: center;
-    // font-size: 2rem;
+    height: 4rem;
+    // justify-content: center;
     color: v.$color-text;
     i {
-      // color: inherit;
       font-size: 2rem;
       padding: 0.6rem;
       img {
-        // height: 2rem;
         width: 2rem;
-        // margin-top: 0.6rem;
-        // padding: 0.6rem;
       }
     }
   }
+}
+
+.project-links-lg {
+  position: absolute;
+  width: 40%;
+  bottom: -150%;
+  left: 1rem;
+  height: 125%;
+  // font-size: 0.6rem;
+  color: v.$color-bg;
+  padding: 1rem;
+  transition: transform 0.2s;
+  background-color: v.$color-text;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  a {
+    // border: 1px solid red;
+    width: 3rem;
+  }
+  a.more {
+    // color: v.$color-low;
+    &::after {
+      position: relative;
+      left: 25%;
+      bottom: 1rem;
+      content: "more";
+      font-size: 10px;
+    }
+  }
+  a.go {
+    &::after {
+      position: relative;
+      left: 1.2rem;
+      bottom: 1rem;
+      content: "visit";
+      font-size: 10px;
+    }
+  }
+}
+
+.moveUp {
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+}
+
+.goMiddle {
+  justify-content: center;
+}
+
+.goRight {
+  justify-content: end;
 }
