--- a/assets/scss/work2.scss
+++ b/assets/scss/work2.scss
@@ -16,7 +16,7 @@
     background-color: v.$color-low;
     .card-img-top {
       filter: grayscale(0);
-      transform: scale(0.975);
+      // transform: scale(0.975);
       transition: all ease-in-out 0.15s;
     }
   }
@@ -98,4 +98,20 @@
 
 .goRight {
   justify-content: end;
+}
+
+.skwd {
+  max-width: 60%;
+  margin: 0 auto;
+  margin-bottom: 5rem;
+  transform: perspective(800px) rotateY(-12deg);
+  transition: transform 1s ease 0s;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.024) 0px 0px 0px 1px,
+    rgba(0, 0, 0, 0.05) 0px 1px 0px 0px, rgba(0, 0, 0, 0.03) 0px 0px 8px 0px,
+    rgba(0, 0, 0, 0.1) 0px 20px 30px 0px;
+
+  &:hover {
+    transform: perspective(800px) rotateY(-4deg);
+  }
 }
