--- a/assets/scss/work2.scss
+++ b/assets/scss/work2.scss
@@ -115,3 +115,10 @@
     transform: perspective(800px) rotateY(-4deg);
   }
 }
+
+@media (max-width: 992px) {
+  .project-links-lg {
+    left: 0;
+    width: 100%;
+  }
+}
