--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -350,6 +350,35 @@ h1.section_heading::before {
   z-index: 101;
 }
 
+.mobile-nav {
+  z-index: 102;
+  position: fixed;
+  bottom: 4rem;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 3rem;
+  background-color: #1b262c;
+  justify-content: space-evenly;
+  color: #bbe1fa;
+  align-items: center;
+}
+.mobile-nav a {
+  display: block;
+}
+.mobile-nav a:hover {
+  color: #3282b8;
+  transition: color 0.25s ease-out;
+}
+
+@media (max-width: 992px) {
+  .nav {
+    display: none;
+  }
+  .mobile-nav {
+    display: flex;
+  }
+}
 .project_boxes-box {
   position: relative;
   padding: 2rem;
@@ -507,6 +536,12 @@ h1.section_heading::before {
   transform: perspective(800px) rotateY(-4deg);
 }
 
+@media (max-width: 992px) {
+  .project-links-lg {
+    left: 0;
+    width: 100%;
+  }
+}
 .skill-badges {
   text-align: center;
   margin-bottom: 6rem;
@@ -518,7 +553,7 @@ h1.section_heading::before {
   margin-left: 2rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .skill-badges {
     text-align: center;
   }
@@ -528,7 +563,7 @@ h1.section_heading::before {
   }
 }
 .footer {
-  padding: 10rem 3rem;
+  padding: 5rem 1rem;
   background: rgb(27, 38, 44);
   background: linear-gradient(180deg, rgb(27, 38, 44) 50%, rgb(15, 76, 117) 99%);
 }
@@ -537,7 +572,6 @@ h1.section_heading::before {
   list-style: none;
   display: flex;
   justify-content: center;
-  margin-bottom: 5rem;
 }
 
 .footer__item {
@@ -554,7 +588,7 @@ h1.section_heading::before {
   height: 5rem;
   display: block;
   margin: 0 auto;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .footer__copyright {
@@ -564,9 +598,31 @@ h1.section_heading::before {
 }
 
 .footer__copyright .footer__link {
-  font-size: 1.4rem;
+  font-size: 1rem;
 }
 
+.footer__credits {
+  font-size: 0.875rem;
+}
+
+@media (max-width: 992px) {
+  .footer {
+    padding: 5rem 2rem;
+    margin-bottom: 5rem;
+  }
+  .footer .footer__nav {
+    display: none;
+  }
+  .footer .footer__copyright {
+    font-size: 0.875rem;
+  }
+  .footer .footer__copyright p {
+    font-size: 0.875rem;
+  }
+  .footer .footer__credits {
+    font-size: 0.75rem;
+  }
+}
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to {
@@ -716,6 +772,36 @@ h1.section_heading::before {
   font-weight: 300;
 }
 
+@media (max-width: 486px) {
+  .modal-content {
+    width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+  .modal-content p {
+    font-size: 0.875rem;
+    line-height: 1.2rem;
+  }
+  .modal-content h1,
+.modal-content h5,
+.modal-content p {
+    text-align: center;
+  }
+  .modal-content li {
+    font-size: 0.875rem;
+  }
+  .modal-content .modal-header {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    height: 1rem;
+    z-index: 999;
+  }
+}
+.project0-case .project-case--img {
+  width: 100%;
+}
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {
@@ -763,6 +849,97 @@ h1.section_heading::before {
   background-color: #1b262c;
 }
 
+#sidebar-left {
+  position: fixed;
+  height: 100vh;
+  bottom: 0;
+  left: 0;
+  width: 5rem;
+  z-index: 101;
+}
+#sidebar-left .content {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  color: #bbe1fa;
+  margin: 1rem auto;
+}
+#sidebar-left .content:after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: calc(50% + 7px);
+  height: 25%;
+  width: 100%;
+  border-left: 1px solid rgba(187, 225, 250, 0.15);
+  z-index: 900;
+}
+#sidebar-left .content:before {
+  position: absolute;
+  content: "quick links";
+  bottom: 10%;
+  left: 6px;
+  font-family: "Figtree", sans-serif;
+  font-weight: 300;
+  height: auto;
+  width: 100%;
+  text-align: center;
+  margin: 10px auto;
+  transform: rotate(270deg);
+  color: #3282b8;
+  z-index: 1000;
+}
+#sidebar-left .content ul {
+  list-style: none;
+}
+#sidebar-left .content ul li {
+  height: 2rem;
+  width: 100%;
+  margin-bottom: 0.8rem;
+}
+#sidebar-left .content ul li a {
+  font-size: 1.6rem;
+  text-align: center;
+  transition: all ease 0.2s;
+  color: #bbe1fa;
+}
+#sidebar-left .content ul li a:hover {
+  color: #3282b8;
+}
+
+a.letterbuttons {
+  font-size: 1.8rem !important;
+  font-weight: 700;
+  font-family: "Titillium Web", sans-serif;
+}
+
+@media (max-width: 992px) {
+  #sidebar-left {
+    border-top: 1px solid #0f4c75;
+    background-color: #1b262c;
+    padding-right: 1rem;
+    height: 4rem;
+    width: 100%;
+  }
+  #sidebar-left .content::after {
+    display: none;
+  }
+  #sidebar-left .content::before {
+    display: none;
+  }
+  #sidebar-left .content ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+  #sidebar-left .content ul li {
+    width: auto;
+    display: inline;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -772,12 +949,13 @@ h1.section_heading::before {
 html {
   scroll-padding-top: 128px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #1b262c;
-  font-size: 1.05rem;
-  line-height: 1.66rem;
+  font-size: 1rem;
+  line-height: 1.6rem;
 }
 
 a {
@@ -792,7 +970,6 @@ section {
   padding-bottom: 16rem;
   z-index: 0;
   transition: ease-in transform 0.5s, opacity 0.6s;
-  border-top: 1px solid rgba(15, 76, 117, 0.2);
 }
 
 .container {
@@ -943,10 +1120,9 @@ section {
 
 @media (max-width: 768px) {
   .container {
+    padding: 0.875rem;
     margin: 0 auto;
-  }
-  .section {
-    padding: 1rem;
+    width: 100vw;
   }
   .contentWrap {
     max-height: calc(100vh - 12rem);
@@ -977,6 +1153,18 @@ section {
     line-height: 1.2rem;
   }
 }
+@media (max-width: 992px) {
+  section {
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+  }
+  .nav {
+    display: none;
+  }
+  .mobile-nav {
+    display: flex;
+  }
+}
 .section--hidden {
   opacity: 0;
   transform: translateY(3rem);
@@ -996,7 +1184,7 @@ section {
 }
 
 #work {
-  margin-top: 10rem;
+  margin-top: 12rem;
 }
 
 /*# sourceMappingURL=main.css.map */
