--- a/assets/scss/modal.scss
+++ b/assets/scss/modal.scss
@@ -50,6 +50,39 @@
   }
 }
 
+@media (max-width: 486px) {
+  .modal-content {
+    width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    p {
+      font-size: 0.875rem;
+      line-height: 1.2rem;
+    }
+    h1,
+    h5,
+    p {
+      text-align: center;
+    }
+    li {
+      font-size: 0.875rem;
+    }
+    .modal-header {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      height: 1rem;
+      z-index: 999;
+    }
+  }
+}
+
+.project0-case {
+  .project-case--img {
+    width: 100%;
+  }
+}
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {
