--- a/assets/scss/nav.scss
+++ b/assets/scss/nav.scss
@@ -101,3 +101,34 @@
     z-index: 101;
   }
 }
+
+.mobile-nav {
+  z-index: 102;
+  position: fixed;
+  bottom: 4rem;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 3rem;
+  background-color: v.$color-bg;
+  justify-content: space-evenly;
+  color: v.$color-text;
+  align-items: center;
+  a {
+    display: block;
+    &:hover {
+      color: v.$color-high;
+      transition: color 0.25s ease-out;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .nav {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: flex;
+  }
+}
