--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -237,7 +237,7 @@ h1.section_heading::before {
   left: -10%;
   width: 120%;
   height: 130%;
-  background-color: #0f4c75;
+  background-color: #ee964b;
   transform: scale(0);
   transform-origin: center;
   opacity: 0;
@@ -245,15 +245,15 @@ h1.section_heading::before {
   z-index: -1;
 }
 .inlineLink:hover {
-  color: #fff;
+  color: #1b262c;
 }
 .inlineLink:hover:before {
   transform: scale(1.3);
-  rotate: 5deg;
+  rotate: 2.5deg;
   opacity: 0.15;
 }
 .inlineLink:hover:after {
-  transform: scale(1) rotate(5deg);
+  transform: scale(1) rotate(2.5deg);
   opacity: 0.9;
 }
 
@@ -578,10 +578,16 @@ h1.section_heading::before {
   margin-right: 4rem;
 }
 
-.footer__link {
+.footer__link,
+footer a {
   font-size: 1rem;
   color: #eee;
   text-decoration: none;
+}
+.footer__link:hover,
+footer a:hover {
+  color: #3282b8;
+  transition: color 0.25s ease-out;
 }
 
 .footer__logo {
@@ -940,6 +946,100 @@ a.letterbuttons {
     display: inline;
   }
 }
+span.typed {
+  text-transform: lowercase;
+  font-weight: 500;
+  border-bottom: 1px solid #3282b8;
+}
+
+.typed-also {
+  text-transform: lowercase;
+  font-weight: 500;
+  border-bottom: 1px solid #ee964b;
+}
+
+.bigger-para {
+  font-size: 2rem;
+}
+
+.about-image {
+  padding: 0 3rem;
+}
+
+.btn-read-more {
+  position: relative;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #bbe1fa;
+  text-decoration: none;
+  display: inline;
+  transition: all 0.3s;
+  padding: 5px 15px;
+}
+.btn-read-more:before {
+  content: "";
+  position: absolute;
+  top: 0 1px;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  border-top: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-bottom: 1px solid linear-gradient(90deg, rgb(50, 130, 184) 0%, rgb(27, 38, 44) 50%);
+  border-left: 1px solid #3282b8;
+  border-right: 1px solid #3282b8;
+  transform: scaleY(1);
+  opacity: 0;
+  transition: 0.5s;
+}
+.btn-read-more:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f4c75;
+  transform: scale(0);
+  transform-origin: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+.btn-read-more:hover {
+  color: #fff;
+}
+.btn-read-more:hover:before {
+  transform: scale(1.3);
+  rotate: 3deg;
+  opacity: 0.25;
+}
+.btn-read-more:hover:after {
+  transform: scale(1) rotate(3deg);
+  opacity: 0.9;
+}
+
+.btn-buy-coffee:after {
+  background-color: #ee964b !important;
+}
+
+@media (max-width: 992px) {
+  .btn-read-more,
+.btn-buy-coffee {
+    font-size: 0.875rem;
+    background-color: rgba(15, 76, 117, 0.66);
+    margin-right: 3px;
+  }
+  .btn-buy-coffee {
+    background-color: rgba(238, 150, 75, 0.66) !important;
+  }
+  .bigger-para {
+    font-size: 1.2rem;
+  }
+  p {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -1181,6 +1281,23 @@ section {
 
 .underline {
   text-decoration: underline;
+}
+
+.highlight-bg {
+  color: #1b262c !important;
+  position: relative;
+  padding: 3rem 0rem;
+}
+.highlight-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #bbe1fa;
+  transform: rotate(2.5deg);
+  z-index: -99;
 }
 
 #work {
