--- a/assets/scss/typo.scss
+++ b/assets/scss/typo.scss
@@ -45,8 +45,7 @@ p {
     font-family: $font-edu;
     color: v.$color-high;
   }
-  // span.design,
-  // span.code,
+
   span.design {
     position: relative;
     color: v.$color-text;
@@ -92,9 +91,6 @@ p {
       &:after {
         transform: scale(1) rotate(5deg);
         opacity: 0.9;
-        // border-top-left-radius: 14px;
-        // border-bottom-right-radius: 14px;
-        // overflow: hidden;
       }
     }
   }
@@ -139,28 +135,20 @@ p {
         transform: scale(1.2);
         rotate: (5deg);
         opacity: 0.33;
-        // border-top-left-radius: 14px;
-        // border-bottom-right-radius: 14px;
       }
       &:after {
         transform: scale(1) rotate(5deg);
         opacity: 0.9;
-        // border-top-left-radius: 14px;
-        // border-bottom-right-radius: 14px;
-        // overflow: hidden;
       }
     }
   }
 
   span.stuff {
     position: relative;
-    // font-size: 1.2rem;
-    // font-weight: 400;
     color: v.$color-text;
     text-decoration: none;
     display: inline-block;
     transition: all 0.3s;
-    // padding: 5px 15px;
 
     &:before {
       content: "";
@@ -196,15 +184,10 @@ p {
         transform: scale(1.2);
         rotate: (5deg);
         opacity: 0.33;
-        // border-top-left-radius: 14px;
-        // border-bottom-right-radius: 14px;
       }
       &:after {
         transform: scale(1) rotate(5deg);
         opacity: 0.9;
-        // border-top-left-radius: 14px;
-        // border-bottom-right-radius: 14px;
-        // overflow: hidden;
       }
     }
   }
@@ -216,13 +199,11 @@ h1.section_heading {
   font-weight: 500;
   font-size: 2.4rem;
   margin: auto;
-  // padding-top: 8rem;
   margin-bottom: 8rem;
   z-index: 999;
   opacity: 1;
 
   &::after {
-    // display: inline-block;
     position: absolute;
     content: "";
     border-top: 1px solid rgba(v.$color-low, 0.3);
@@ -232,7 +213,6 @@ h1.section_heading {
     left: 50%;
   }
   &::before {
-    // display: inline-block;
     position: absolute;
     content: "";
     border-top: 1px solid rgba(v.$color-low, 0.3);
@@ -274,7 +254,7 @@ h1.section_heading {
     left: -10%;
     width: 120%;
     height: 130%;
-    background-color: v.$color-low;
+    background-color: v.$color-acc-high;
     transform: scale(0);
     transform-origin: center;
     opacity: 0;
@@ -282,20 +262,16 @@ h1.section_heading {
     z-index: -1;
   }
   &:hover {
-    color: #fff;
+    color: v.$color-bg;
+    // color: #fff;
     &:before {
       transform: scale(1.3);
-      rotate: (5deg);
+      rotate: (2.5deg);
       opacity: 0.15;
-      // border-top-left-radius: 14px;
-      // border-bottom-right-radius: 14px;
     }
     &:after {
-      transform: scale(1) rotate(5deg);
+      transform: scale(1) rotate(2.5deg);
       opacity: 0.9;
-      // border-top-left-radius: 14px;
-      // border-bottom-right-radius: 14px;
-      // overflow: hidden;
     }
   }
 }
