--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -3,6 +3,8 @@ $color-text: #bbe1fa;
 $color-high: #3282b8;
 $color-low: #0f4c75;
 $color-lowlight: #112240;
+$color-acc-high: #ee964b;
+$color-acc-low: #1b998b;
 $color-gradient: linear-gradient(
   90deg,
   rgba(50, 130, 184, 1) 0%,
