--- a/assets/scss/typo.scss
+++ b/assets/scss/typo.scss
@@ -275,3 +275,11 @@ h1.section_heading {
     }
   }
 }
+
+@media (max-width: 992px) {
+  h1.header_title {
+    font-size: 2rem;
+    line-height: 2.6rem;
+    margin-top: 6rem;
+  }
+}
